# QA-Agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements-langgraph.txt  requirements.txt  result.json  server.py  start_backend.bat  start_frontend.bat  start_studio.bat
.langgraph_api/: .langgraph_ops.pckl
QA AI Drawing/QA Knowledge/: qa_ai_common_mistakes.txt  qa_ai_mistakes.json  structural_qa_rag_knowledge_pack.docx
QA AI Drawing/QA Knowledge/bend/bar_length/: bar_length.md
QA AI Drawing/QA Knowledge/bend/bending_angle/: bending_angle.md
QA AI Drawing/QA Knowledge/bend/mass_arithmetic/: mass_arithmetic.md
QA AI Drawing/QA Knowledge/bend/mesh_pos/: mesh_pos.md
QA AI Drawing/QA Knowledge/bend/mesh_ratio/: mesh_ratio.md
QA AI Drawing/QA Knowledge/bend/pos_count/: pos_count.md
QA AI Drawing/QA Knowledge/bend/pos_coverage/: pos_coverage.md
QA AI Drawing/QA Knowledge/common/: terminology.md
QA AI Drawing/QA Knowledge/rebar/pin_width_horizontal/: pin_width_horizontal.md
QA AI Drawing/QA Knowledge/rebar/pin_width_vertical/: pin_width_vertical.md
scripts/: docx_to_md.py
src/qa_agent/: __init__.py  checks_registry.py  graph.py  main.py  mistakes_store.py  pdf_annotator.py  server.py  state.py
src/qa_agent/extraction/: __init__.py  catalog.py  context.py  debug_trace.py  element_code.py  evaluators.py  format.py  scale.py
src/qa_agent/nodes/: _base.py  aggregate.py  bend_check.py  issue_filter.py  pdf_extractor.py  preprocess.py  rebar_check.py  return_ui.py  spell_check.py  user_ai_checks.py
src/qa_agent/rag/: knowledge_builder.py  knowledge_paths.py  retriever.py
web/: index.html  package-lock.json  package.json  vercel.json
web/src/: App.tsx
(+46 files in other folders)
