[project]
name = "qa-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "phat.phamt",email = "ppham@gsi-software.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=1.2.17,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-anthropic (>=1.4.3,<2.0.0)",
    "langsmith (>=0.8.0,<1.0.0)",
    "langgraph-cli[inmem] (>=0.2.0)",
]

[tool.poetry]
packages = [{include = "qa_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
