[project]
name = "qa-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "phat.phamt",email = "ppham@gsi-software.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.17,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-anthropic (>=1.4.3,<2.0.0)",
    "langsmith (>=0.8.0,<1.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "python-multipart (>=0.0.9,<1.0.0)",
    "uvicorn (>=0.29.0,<1.0.0)",
    "langgraph-cli[inmem] (>=0.4.24,<0.5.0)",
    "langgraph-sdk (>=0.1.0,<1.0.0)",
    "pypdf (>=4.0.0,<5.0.0)",
    "python-docx (>=1.1.0,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pymupdf (>=1.24.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "qa_agent", from = "src"}]

[tool.vercel]
entrypoint = "server:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
